<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2E31111"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_celsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Celsius"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_fahrenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Fahrenheit"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_celsius" />

    <EditText
        android:id="@+id/txt_rankine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Rankine"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_kelvin" />

    <EditText
        android:id="@+id/txt_kelvin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Kelvin"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fahrenheit" />

    <EditText
        android:id="@+id/txt_reaumur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Reaumur"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rankine" />

    <Button
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:onClick="calcular"
        android:text="@string/Boton_Calcular"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_reaumur" />

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="53dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:onClick="borrar"
        android:text="@string/Boton_Borrar_Datos"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_reaumur" />

</androidx.constraintlayout.widget.ConstraintLayout>